samples/_failures_safe/1761249375_dc4722_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f365a76c.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_f365a76c.c:171:5: error: expected identifier at end of input
  171 |     token->
      |     ^~~~~
./samples/SAFE/__tmp_f365a76c.c:171:5: error: expected declaration or statement at end of input
